--- a/index.html
+++ b/index.html
@@ -28,14 +28,9 @@
     .box3 {
       background-color: green;
       color: darkgreen;
-      background-image: radial-gradient(brown 15%, transparent 15%);
+      background-image: radial-gradient(brown 15%);
       background-size: 30px 30px;
       border: none;
-    }
-    p.note {
-      color: red;
-      font-style: italic;
-      font-size: 20px;
     }
   </style>
 </head>
@@ -43,6 +38,6 @@
   <div class="box1">Hello World</div>
   <div class="box2">Hello World</div>
   <div class="box3">Hello World</div>
-  <p class="note">* Note colors, backgrounds and borders.</p>
+  
 </body>
 </html>
