--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <title>Hello World Styling</title>
   <style>
     body {
-      text-align: center;
       font-family: Arial, sans-serif;
       margin-top: 50px;
+      margin-left: 50px;
     }
     .box1, .box2, .box3 {
       width: 400px;
-      margin: 20px auto;
+      margin: 20px 0;
       font-size: 36px;
       font-weight: bold;
-      text-align: center;
+      text-align: left;
       padding: 10px;
     }
     .box1 {
@@ -25,11 +25,15 @@
       border: 4px solid blue;
       border-radius: 15px;
     }
-    .box3 {
-      background-color: green;
-      color: darkgreen;
-      background-image: radial-gradient(brown 15%);
-      background-size: 30px 30px;
+     .box3 {
+      font-size: 36px;
+      font-weight: bold;
+      text-align: left;
+      padding: 10px;
+      background-color: #3ca05a;
+      background-image: radial-gradient(#7b5b6e 10%, transparent 11%);
+      background-size: 40px 40px;
+      color: black;
       border: none;
     }
   </style>
@@ -38,6 +42,6 @@
   <div class="box1">Hello World</div>
   <div class="box2">Hello World</div>
   <div class="box3">Hello World</div>
-  
 </body>
 </html>
+
